--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -55,7 +55,25 @@ tableofcontents}
 Word in progress. Please send comments to \href{http://florianhartig.wordpress.com/}{http://florianhartig.wordpress.com/}
 
 
-\chapter{Logic and philosophy of science}
+\chapter{What is science}
+
+The Oxford dictionary defines science as 
+
+\begin{quote}
+Science
+Pronunciation: /?s???ns/
+[mass noun]
+the intellectual and practical activity encompassing the systematic study of the structure and behaviour of the physical and natural world through observation and experiment
+\end{quote}
+
+
+
+
+
+Science is the Current dominant answer to what one can know and how to find it out (epistemology)
+
+
+\section{Logic and philosophy of science}
 
 
 \section{Progress in small steps, or a history of science}
@@ -158,6 +176,22 @@ Kelleher-Tenguidelineseffective-2011
 \chapter{Scientific writing}
 
 \section{The purpose and the art of writing}
+
+
+\section{Structure}
+
+\subsection*{Sentence Structure}
+
+
+\subsection{Paragraph structure}
+
+A paragraph is a logical unit of text. 
+
+The first sentence provides the topic of the paragraph. The last sentence should, ideally, provide a closing 
+
+
+
+
 
 \section{Style}
 
