--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -135,9 +135,16 @@ Assuming you have your question, how can we find an answer to this.
 
 Are the things 
 
-\subsection{Statistical validity}
+\subsubsection{Bias}
+
+
+\citep{Ransohoff-Biasasthreat-2005}
 
 \subsection{Internal validity}
+
+
+\subsection{Statistical validity}
+
 
 \subsection{External validity}
 
